--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nextgenbrothers_</title>
+    <title>Mangalô
+    </title>
     <!-- Favicon -->
     <link rel="icon" href="logomanga.jpg" type="image/x-icon" />
     <!-- Font Awesome icons -->
