--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mangalô
     </title>
     <!-- Favicon -->
-    <link rel="icon" href="logomanga.jpg" type="image/x-icon" />
+    <link rel="icon" href="logomanga.jpg" type="logomanga.jpg" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
@@ -29,7 +29,7 @@
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="logo.png.jpg" target="_blank">
+          <a href="logomangan.jpg" target="_blank">
            
           </a>
         </div>
@@ -41,19 +41,30 @@
     </div>
 
     <div id="userName">
-      @nextgenbrothers_
+      Sorveteria Mangalô
     </div>
 
+
     <div id="links">
-      <a class="link" href="https://www.instagram.com/nextgenbrothers_/" target="_blank">
+      <a class="link" href="URL_DO_CARDÁPIO" target="_blank">
+          <i class="fas fa-utensils">&nbsp;</i>Cardápio
+      </a>
+  </div>
+  
+    <div id="links">
+      <a class="link" href="https://www.instagram.com/dolceacai_mangalo/" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
-      <a class="link" href="https://api.whatsapp.com/send?phone=5589981526899&text=Ol%C3%A1,%20quero%20um%20or%C3%A7amento!" target="_blank">
-        <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp 1
+      <a class="link" href="https://api.whatsapp.com/send?phone=556294866635&text=Ol%C3%A1,%20gostaria%20de%20fazer%20um%20pedido!" target="_blank">
+        <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp 
     </a>    
-    <a class="link" href="https://api.whatsapp.com/send?phone=556292081829&text=Ol%C3%A1,%20quero%20um%20or%C3%A7amento!" target="_blank">
+    <!--<a class="link" href="https://maps.app.goo.gl/mfXygxLEtvxvGQsx9" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp 2
-    </a>    
+    </a>    -->
+    <a class="link" href="https://maps.app.goo.gl/mfXygxLEtvxvGQsx9" target="_blank">
+      <i class="fas fa-map-marker-alt">&nbsp;</i>Localização
+  </a>
+  
       <!--<a class="link" href="https://www.instagram.com/johnggli" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
@@ -66,7 +77,7 @@
     </div>
 
     <div id="hashtag">
-      #Seu negócio acima da concorrência!❤
+      #Peça logo o seu!❤
     </div>
   </body>
 </html>
