alteração do cardapio pdf

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
     <div id="links">
-      <a class="link" href="URL_DO_CARDÁPIO" target="_blank">
+      <a class="link" href="https://drive.google.com/file/d/1l3U6aDHsYY96wwgNO9-gS51M6WQd2bhq/view" target="_blank">
           <i class="fas fa-utensils">&nbsp;</i>Cardápio
       </a>
   </div>
@@ -79,5 +79,29 @@
     <div id="hashtag">
       #Peça logo o seu!❤
     </div>
+
+    <div class="footer">
+      <p>&copy; 2024 Sorveteria Mangalô. Todos os direitos reservados.</p>
+      <p>Desenvolvido por <a href="https://www.instagram.com/nextgenbrothers_/" target="_blank">NextGenBrothers</a></p>
+      <p><a href="https://docs.google.com/document/d/1nB-Gu1tram5Kyc80ADyoaBLH8o0m_jSef4jjrirHwt4/edit">Política de Privacidade</a> | <a href="termos_servico.html">Termos de Serviço</a></p>
+  </div>
+  
+  <style>
+      .footer {
+          background-color: #33333300;
+          color: white;
+          padding: 20px;
+          text-align: center;
+          margin-top: 50px;
+      }
+      .footer a {
+          color: #ffd700;
+          text-decoration: none;
+      }
+      .footer a:hover {
+          text-decoration: underline;
+      }
+  </style>
+  
   </body>
 </html>
