termos de serviço

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="footer">
       <p>&copy; 2024 Sorveteria Mangalô. Todos os direitos reservados.</p>
       <p>Desenvolvido por <a href="https://www.instagram.com/nextgenbrothers_/" target="_blank">NextGenBrothers</a></p>
-      <p><a href="https://docs.google.com/document/d/1nB-Gu1tram5Kyc80ADyoaBLH8o0m_jSef4jjrirHwt4/edit">Política de Privacidade</a> | <a href="termos_servico.html">Termos de Serviço</a></p>
+      <p><a href="https://docs.google.com/document/d/1nB-Gu1tram5Kyc80ADyoaBLH8o0m_jSef4jjrirHwt4/edit">Política de Privacidade</a> | <a href="">Termos de Serviço</a></p>
   </div>
   
   <style>
